@@ -1,3 +1,11 @@
+2001-11-28   Roland Giersig  <rgiersig@cpan.org>
+
+	* Tty.pm: v0.92_04
+
+	* Tty.xs (BOOT): use perl_get_sv for backward compat
+
+	* Makefile.PL: added analysis of configuration
+
 2001-11-27   Roland Giersig  <rgiersig@cpan.org>
 
 	* Tty.pm: v0.92_03
